--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="stylesheet" href="src/styles/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mood Garden</title>
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div style="padding:20px;">
+            <button id="teamBtn">Team</button>
+            <button id="howToUseBtn">How To Use</button>
+        </div>
+    </div>
+
     <script type="module" src="src/main.js"></script>
 </body>
 
