Comment out storage.js script tag in index.html

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ focus:ring-white/20 resize-none"></textarea>
         /* Live detection while typing */
         moodInput.addEventListener("input", detectMoodFromText);
     </script>
-    <script src="storage.js"></script>
+<!--     <script src="storage.js"></script> -->
     <script type="module" src="/src/main.js"></script>
 
 
