Refactor history rendering to use MoodStorage and update empty state message

--- a/index.html
+++ b/index.html
@@ -451,55 +451,55 @@ focus:ring-white/20 resize-none"></textarea>
 
                     <!-- HISTORY -->
                     <div id="page-history" class="page flex-col gap-5">
-                        <div>
-                            <h2 class="text-xl font-semibold">History 🕰️</h2>
-                            <p class="text-sm text-white/60 mt-1">All your past mood entries</p>
-                        </div>
-                        <div id="historyContainer" class="flex flex-col gap-3">
-                            <div
-                                    class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition">
-                                <span class="text-3xl">🌻</span>
-                                <div class="flex-1">
-                                    <p class="text-sm font-medium">Happy</p>
-                                    <p class="text-xs text-white/50">Today, 09:14 · "Had a great morning walk"
-                                    </p>
-                                </div>
-                            </div>
-                            <div
-                                    class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition">
-                                <span class="text-3xl">🌸</span>
-                                <div class="flex-1">
-                                    <p class="text-sm font-medium">Calm</p>
-                                    <p class="text-xs text-white/50">Yesterday, 21:30 · "Quiet evening at home"
-                                    </p>
-                                </div>
-                            </div>
-                            <div
-                                    class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition">
-                                <span class="text-3xl">🌼</span>
-                                <div class="flex-1">
-                                    <p class="text-sm font-medium">Happy</p>
-                                    <p class="text-xs text-white/50">Feb 26, 18:00 · "Finished a big project"
-                                    </p>
-                                </div>
-                            </div>
-                            <div
-                                    class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition">
-                                <span class="text-3xl">🥀</span>
-                                <div class="flex-1">
-                                    <p class="text-sm font-medium">Sad</p>
-                                    <p class="text-xs text-white/50">Feb 25, 20:15 · "Feeling a bit low"</p>
-                                </div>
-                            </div>
-                            <div
-                                    class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition">
-                                <span class="text-3xl">🌺</span>
-                                <div class="flex-1">
-                                    <p class="text-sm font-medium">Excited</p>
-                                    <p class="text-xs text-white/50">Feb 24, 11:00 · "New idea for the app!"</p>
-                                </div>
-                            </div>
-                        </div>
+<!--                         <div> -->
+<!--                             <h2 class="text-xl font-semibold">History 🕰️</h2> -->
+<!--                             <p class="text-sm text-white/60 mt-1">All your past mood entries</p> -->
+<!--                         </div> -->
+<!--                         <div id="historyContainer" class="flex flex-col gap-3"> -->
+<!--                             <div -->
+<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
+<!--                                 <span class="text-3xl">🌻</span> -->
+<!--                                 <div class="flex-1"> -->
+<!--                                     <p class="text-sm font-medium">Happy</p> -->
+<!--                                     <p class="text-xs text-white/50">Today, 09:14 · "Had a great morning walk" -->
+<!--                                     </p> -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                             <div -->
+<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
+<!--                                 <span class="text-3xl">🌸</span> -->
+<!--                                 <div class="flex-1"> -->
+<!--                                     <p class="text-sm font-medium">Calm</p> -->
+<!--                                     <p class="text-xs text-white/50">Yesterday, 21:30 · "Quiet evening at home" -->
+<!--                                     </p> -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                             <div -->
+<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
+<!--                                 <span class="text-3xl">🌼</span> -->
+<!--                                 <div class="flex-1"> -->
+<!--                                     <p class="text-sm font-medium">Happy</p> -->
+<!--                                     <p class="text-xs text-white/50">Feb 26, 18:00 · "Finished a big project" -->
+<!--                                     </p> -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                             <div -->
+<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
+<!--                                 <span class="text-3xl">🥀</span> -->
+<!--                                 <div class="flex-1"> -->
+<!--                                     <p class="text-sm font-medium">Sad</p> -->
+<!--                                     <p class="text-xs text-white/50">Feb 25, 20:15 · "Feeling a bit low"</p> -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                             <div -->
+<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
+<!--                                 <span class="text-3xl">🌺</span> -->
+<!--                                 <div class="flex-1"> -->
+<!--                                     <p class="text-sm font-medium">Excited</p> -->
+<!--                                     <p class="text-xs text-white/50">Feb 24, 11:00 · "New idea for the app!"</p> -->
+<!--                                 </div> -->
+<!--                             </div> -->
+<!--                         </div> -->
 
                     </div>
                     <!-- TEAM -->
@@ -513,7 +513,7 @@ focus:ring-white/20 resize-none"></textarea>
     </div>
 </div>
 <script type="module" src="./src/main.js"></script>
-<script type="module" src="./src/scripts/scripts.js"></script>
+<!-- <script type="module" src="./src/scripts/scripts.js"></script> -->
 <!-- <script> -->
 <!--     const sidebar = document.getElementById('sidebar'); -->
 
