--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@ focus:ring-white/20 resize-none"></textarea>
     </div>
 </div>
 <script type="module" src="./src/main.js"></script>
+<script type="module" src="./src/scripts/addToStorage.js"></script>
 <!-- <script type="module" src="./src/scripts/scripts.js"></script> -->
 <!-- <script> -->
 <!--     const sidebar = document.getElementById('sidebar'); -->
