Update garden rendering and restructure main.js to include additional page renders

--- a/index.html
+++ b/index.html
@@ -353,47 +353,7 @@ focus:ring-white/20 resize-none"></textarea>
                     </div>
 
                     <!-- GARDEN -->
-                    <div id="page-garden" class="page flex-col gap-5">
-                        <div>
-                            <h2 class="text-xl font-semibold">Your Garden 🌿</h2>
-                            <p class="text-sm text-white/60 mt-1">Every flower is a day you tracked your mood
-                            </p>
-                        </div>
-                        <div class="grid grid-cols-4 gap-3 sm:grid-cols-7">
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🌻</span><span class="text-xs text-white/50">Mon</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🌸</span><span class="text-xs text-white/50">Tue</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🌼</span><span class="text-xs text-white/50">Wed</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🌷</span><span class="text-xs text-white/50">Thu</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🥀</span><span class="text-xs text-white/50">Fri</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/10 p-3 text-center hover:bg-white/20">
-                                <span class="text-3xl">🌺</span><span class="text-xs text-white/50">Sat</span>
-                            </div>
-                            <div
-                                    class="flower flex flex-col items-center gap-1 rounded-2xl bg-white/5 p-3 text-center opacity-40">
-                                <span class="text-3xl">🌱</span><span class="text-xs text-white/50">Sun</span>
-                            </div>
-                        </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-4 text-sm text-white/70">
-                            🌿 <span class="text-white font-medium">6 days</span> logged this week · Most common
-                            mood: <span class="text-yellow-300">🌻 Happy</span>
-                        </div>
-                    </div>
+                    <div id="page-garden" class="page flex-col gap-5"></div>
 
                     <!-- ANALYTICS -->
                     <div id="page-analytics" class="page flex-col gap-5">
@@ -450,58 +410,7 @@ focus:ring-white/20 resize-none"></textarea>
                     </div>
 
                     <!-- HISTORY -->
-                    <div id="page-history" class="page flex-col gap-5">
-<!--                         <div> -->
-<!--                             <h2 class="text-xl font-semibold">History 🕰️</h2> -->
-<!--                             <p class="text-sm text-white/60 mt-1">All your past mood entries</p> -->
-<!--                         </div> -->
-<!--                         <div id="historyContainer" class="flex flex-col gap-3"> -->
-<!--                             <div -->
-<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
-<!--                                 <span class="text-3xl">🌻</span> -->
-<!--                                 <div class="flex-1"> -->
-<!--                                     <p class="text-sm font-medium">Happy</p> -->
-<!--                                     <p class="text-xs text-white/50">Today, 09:14 · "Had a great morning walk" -->
-<!--                                     </p> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <div -->
-<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
-<!--                                 <span class="text-3xl">🌸</span> -->
-<!--                                 <div class="flex-1"> -->
-<!--                                     <p class="text-sm font-medium">Calm</p> -->
-<!--                                     <p class="text-xs text-white/50">Yesterday, 21:30 · "Quiet evening at home" -->
-<!--                                     </p> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <div -->
-<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
-<!--                                 <span class="text-3xl">🌼</span> -->
-<!--                                 <div class="flex-1"> -->
-<!--                                     <p class="text-sm font-medium">Happy</p> -->
-<!--                                     <p class="text-xs text-white/50">Feb 26, 18:00 · "Finished a big project" -->
-<!--                                     </p> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <div -->
-<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
-<!--                                 <span class="text-3xl">🥀</span> -->
-<!--                                 <div class="flex-1"> -->
-<!--                                     <p class="text-sm font-medium">Sad</p> -->
-<!--                                     <p class="text-xs text-white/50">Feb 25, 20:15 · "Feeling a bit low"</p> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <div -->
-<!--                                     class="flex items-center gap-4 rounded-2xl bg-white/10 px-4 py-3 hover:bg-white/15 transition"> -->
-<!--                                 <span class="text-3xl">🌺</span> -->
-<!--                                 <div class="flex-1"> -->
-<!--                                     <p class="text-sm font-medium">Excited</p> -->
-<!--                                     <p class="text-xs text-white/50">Feb 24, 11:00 · "New idea for the app!"</p> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                         </div> -->
-
-                    </div>
+                    <div id="page-history" class="page flex-col gap-5"></div>
                     <!-- TEAM -->
                     <div id="page-team" class="page flex-col gap-5"></div>
 
@@ -654,7 +563,6 @@ focus:ring-white/20 resize-none"></textarea>
 <!--     /* Live detection while typing */ -->
 <!--     moodInput.addEventListener("input", detectMoodFromText); -->
 <!-- </script> -->
-
 
 
 <!-- <script> -->
